--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -32,3 +32,13 @@
 .contact-content a:hover {
   text-decoration: underline;
 }
+
+@media screen and (max-width: 480px) {
+  .contact-container {
+    height: initial;
+  }
+
+  .contact-content {
+    padding: 5rem 5rem;
+  }
+}
