Add font smoothing

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@ html {
 
 body {
   font-size: 1.6rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 #root {
